<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--  Name Label -->
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strProfil"
            android:gravity="center"
            android:textSize="20sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp">
            <EditText android:id="@+id/txtKoPas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/strUsername" />
        </android.support.design.widget.TextInputLayout>

        <!--  Alamat Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <EditText android:id="@+id/txtAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage"
                android:hint="@string/strAlamat" />
        </android.support.design.widget.TextInputLayout>

        <!--  Nama Orang tua Kandung Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <EditText android:id="@+id/txtOrtu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/strOrtu" />
        </android.support.design.widget.TextInputLayout>

        <!--  Tanggal Lahir Label -->
        <DatePicker
            android:id="@+id/TanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <!--  Agama Label -->
        <Spinner
            android:id="@+id/idAgama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <!--  Golongan Darah Label -->
        <Spinner
            android:id="@+id/idGoldar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <!--  Nomor Handphone Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <EditText android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="3"
                android:hint="@string/strHandphone" />
        </android.support.design.widget.TextInputLayout>

        <!--  BPJS Label -->
        <Spinner
            android:id="@+id/idBPJS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <!--  Kode BPJS Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <EditText android:id="@+id/txtOrtu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/strKodeBPJS" />
        </android.support.design.widget.TextInputLayout>

        <!-- Confirm Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/btnColorBlack"
            android:textColor="#ffffff"
            android:padding="12dp"
            android:text="@string/strSimpan"/>

    </LinearLayout>
</ScrollView>
