<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  >

    </android.support.v4.view.ViewPager>


    <LinearLayout
        android:id="@+id/idCarousel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10sp"
        android:orientation="vertical"
        android:padding="16dp">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="1dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="4dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="0.5dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_profil"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.35"
            android:background="@color/btnColor2"
            android:padding="12dp"
            android:drawableLeft="@drawable/profile_red"
            android:text="@string/inputProfil"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="#c0392b" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_registrasi"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.35"
            android:background="@color/btnColor2"
            android:padding="12dp"
            android:drawableLeft="@drawable/berobat_red"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/strBerobat"
            android:textColor="#c0392b" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_riwayat"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.35"
            android:background="@color/btnColor2"
            android:padding="12dp"
            android:drawableLeft="@drawable/riwayat_red"
            android:textSize="20dp"
            android:text="@string/strRiwayat"
            android:textAlignment="center"
            android:textColor="#c0392b" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>


